NetBSD Problem Report #56176

From www@netbsd.org  Sat May 15 08:44:05 2021
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B13B81A9289
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 15 May 2021 08:44:05 +0000 (UTC)
Message-Id: <20210515084404.7CCCE1A928A@mollari.NetBSD.org>
Date: Sat, 15 May 2021 08:44:04 +0000 (UTC)
From: nonakap@gmail.com
Reply-To: nonakap@gmail.com
To: gnats-bugs@NetBSD.org
Subject: rge(4) does not match Realtek 8125 chip.
X-Send-Pr-Version: www-1.0

>Number:         56176
>Category:       kern
>Synopsis:       rge(4) does not match Realtek 8125 chip.
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat May 15 08:45:00 +0000 2021
>Closed-Date:    Sat May 15 16:59:34 +0000 2021
>Last-Modified:  Fri Dec 03 19:50:01 +0000 2021
>Originator:     Nonaka Kimihiro
>Release:        NetBSD HEAD (20210515)
>Organization:
>Environment:
NetBSD koharu.home.nonakap.org 9.99.82 NetBSD 9.99.82 (GENERIC) #5: Sat May 15 17:28:17 JST 2021  nonaka@koharu.home.nonakap.org:/home/snapshot/NetBSD/HEAD-20210515/obj.NetBSD-amd64/amd64/sys/arch/amd64/compile/GENERIC amd64
>Description:
[     1.015946] pci9 at ppb8 bus 9
[     1.015946] pci9: i/o space, memory space enabled, rd/line, wr/inv ok
[     1.015946] rge_match:181: compat_data[0].id=0x300010ec
[     1.015946] rge_match:181: compat_data[1].id=0xffffffff812510ec
[     1.015946] rge_match:181: compat_data[2].id=0xffffffff
[     1.015946] rge_match:184: pa_id=0x812510ec, 8125=0x812510ec, ret=0
[     1.015946] Realtek Semiconductor 8125 10/100/1G/2.5G Ethernet (ethernet network, revision 0x04) at pci9 dev 0 function 0 not configured

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56176 CVS commit: src/sys/dev/pci
Date: Sat, 15 May 2021 13:00:45 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Sat May 15 13:00:45 UTC 2021

 Modified Files:
 	src/sys/dev/pci: pcireg.h

 Log Message:
 Change PCI_VENDOR_MASK and PCI_PRODUCT_MASK to unsigned values, to prevent
 sign extension of product ID when shifted up into place in PCI_ID_CODE()

 Should fix PR 56176.


 To generate a diff of this commit:
 cvs rdiff -u -r1.153 -r1.154 src/sys/dev/pci/pcireg.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: jakllsch@NetBSD.org
State-Changed-When: Sat, 15 May 2021 16:59:34 +0000
State-Changed-Why:
commit fixed the problem for me


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56176 CVS commit: [netbsd-9] src/sys/dev/pci
Date: Fri, 3 Dec 2021 19:40:38 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Fri Dec  3 19:40:38 UTC 2021

 Modified Files:
 	src/sys/dev/pci [netbsd-9]: nvme_pci.c pci.c pci_subr.c pcireg.h ppb.c

 Log Message:
 Pull up the following revisions, requested by msaitoh in ticket #1384:

 	sys/dev/pci/pcireg.h			1.152-1.154, 1.156-1.161
 	sys/dev/pci/pci_subr.c			1.222, 1.227-1.232 via patch
 	sys/dev/pci/nvme_pci.c			1.31
 	sys/dev/pci/pci.c			1.158, 1.163
 	sys/dev/pci/ppb.c			1.74

 - When parsing Enhanced Allocation entries, use the correct calculation
   for finding the next entry.
 - Add 32.0GT/s to the list of pcie speeds (PCIe 5.x.).
 - Add Some PCI config information:
   - Lane Margining at the Receiver
   - NVME admin interface
   - UFSHCI
   - InfiniBand
   - Host fabric
   - HDA 1.0 with vendor ext
   - USB4 HCI
   - MIPI I3C
   - Cellular controller/modem (+ Ethernet)
 - Change PCI_VENDOR_MASK and PCI_PRODUCT_MASK to unsigned values, to
   prevent sign extension of product ID when shifted up into place in
   PCI_ID_CODE(). Fixes PR kern/56176.
 - Add LCAP & LCAP2 definitions.
 - Use PCI-SIG official acronyms for some macros.
 - Fix typo in some messages.
 - Fix typo in comments.
 - Whitespace fixes.


 To generate a diff of this commit:
 cvs rdiff -u -r1.26.4.1 -r1.26.4.2 src/sys/dev/pci/nvme_pci.c
 cvs rdiff -u -r1.154.4.2 -r1.154.4.3 src/sys/dev/pci/pci.c
 cvs rdiff -u -r1.215.2.4 -r1.215.2.5 src/sys/dev/pci/pci_subr.c
 cvs rdiff -u -r1.147.4.2 -r1.147.4.3 src/sys/dev/pci/pcireg.h
 cvs rdiff -u -r1.69 -r1.69.2.1 src/sys/dev/pci/ppb.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56176 CVS commit: [netbsd-8] src/sys/dev/pci
Date: Fri, 3 Dec 2021 19:45:13 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Fri Dec  3 19:45:13 UTC 2021

 Modified Files:
 	src/sys/dev/pci [netbsd-8]: nvme_pci.c pci_subr.c pcireg.h ppb.c

 Log Message:
 Pull up the following revisions, requested by msaitoh in ticket #1714:

 	sys/dev/pci/pcireg.h			1.148-1.154, 1.156-1.161
 	sys/dev/pci/pci_subr.c			1.217-1.222, 1.224, 1.227-1.232
 						via patch
 	sys/dev/pci/nvme_pci.c			1.31
 	sys/dev/pci/pci.c			1.158
 	sys/dev/pci/ppb.c			1.74

 - Print Bridge Config Retry Enable bit and Retimer Presence Detect
   Supported bit.
 - Add PCIe 4.0 stuff a little:
   - 10-bit Tag Requester/Completer.
   - Add Data link Feature extended capability.
   - Add Physical Layer 16.0 GT/s extended capability. Not decode yet.
 - Change pci_conf_print() to allocate memory for the regs dynamically
   instead of on-stack.
 - Print some DPC register values not with %04x but with %08x because
   those are 32bit.
 - Fix a bug that the virtual channel extended configuration's
   arbitration phase register can't be decoded correctly.
 - When parsing Enhanced Allocation entries, use the correct calculation
   for finding the next entry.
 - Add 32.0GT/s to the list of pcie speeds (PCIe 5.x.).
 - Add Some PCI config information:
   - Lane Margining at the Receiver
   - NVME admin interface
   - UFSHCI
   - InfiniBand
   - Host fabric
   - HDA 1.0 with vendor ext
   - USB4 HCI
   - MIPI I3C
   - Cellular controller/modem (+ Ethernet)
 - Change PCI_VENDOR_MASK and PCI_PRODUCT_MASK to unsigned values, to
   prevent sign extension of product ID when shifted up into place in
   PCI_ID_CODE(). Fixes PR kern/56176.
 - Add LCAP & LCAP2 definitions.
 - Use PCI-SIG official acronyms for some macros.
 - Remove unused shift and mask definitions.
 - Fix typo in some messages.
 - Fix typo in comments.
 - Whitespace fixes.


 To generate a diff of this commit:
 cvs rdiff -u -r1.19.2.2 -r1.19.2.3 src/sys/dev/pci/nvme_pci.c
 cvs rdiff -u -r1.183.2.12 -r1.183.2.13 src/sys/dev/pci/pci_subr.c
 cvs rdiff -u -r1.130.2.9 -r1.130.2.10 src/sys/dev/pci/pcireg.h
 cvs rdiff -u -r1.63.2.2 -r1.63.2.3 src/sys/dev/pci/ppb.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.